--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -175,7 +175,7 @@ echo "Downloaded auth adapter jar" &&\
 
 wget ${auth_wrapper_url_env} -O ${idp_auth_wrapper_jar_path}/authentication-wrapper.jar &&\
 
-echo "Downloaded IDP auth wrapper jar" &&\
+echo "Downloaded IDP auth wrapper jar"
 
 RUN sed -i -e '/listen/!b' -e '/80;/!b' -e 's/80;/8080;/' /etc/nginx/conf.d/default.conf
 
