--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -169,6 +169,10 @@ COPY /src/auth/* ${regproc_jar_path}/
 
 COPY ./configure.sh ${work_dir}/
 
+RUN wget ${auth_adapter_jar_url_env} -O ${kernel_jar_path}/kernel-auth-adapter.jar  &&\
+
+echo "Downloaded auth adapter jar"
+
 RUN sed -i -e '/listen/!b' -e '/80;/!b' -e 's/80;/8080;/' /etc/nginx/conf.d/default.conf
 
 # select container user for all tasks
