--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -80,6 +80,9 @@ ENV idp_auth_wrapper_jar_path=${base_path}/libs-release-local/idp/idp-auth-wrapp
 # environment variable for tech5 jar path
 #ENV tech5_zip_path=${base_path}/libs-release-local/sdk/tech5
 
+# environment variable for esignet wrappers zip path
+ENV esignet_wrapper_lib_zip_path=${base_path}/libs-release-local/esignet
+
 # environment variable for Clamav dependency
 ENV clamav_path=${base_path}/libs-release-local/clamav
 
