--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -7,7 +7,7 @@ on:
       - 1.1.5
       - 1.2.*
       - release*
-      - MOSIP-26057
+      - WuriGuinea-1.2.0.1-B4
 jobs:
 
   build-artifactory-server:
