--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx
+FROM nginx@sha256:af296b188c7b7df99ba960ca614439c99cb7cf252ed7bbc23e90cfda59092305
 
 # can be passed during Docker build as build time environment for github branch to pickup configuration from.
 ARG container_user=mosip
