--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -96,6 +96,9 @@ ENV clamav_path=${base_path}/libs-release-local/clamav
 
 ENV regclient_jar_path=${base_path}/libs-release-local
 
+# environment variable for custom-impl jar path
+ENV custom_zip_path=${base_path}/libs-release-local/impl
+
 ENV master_template_path=${base_path}/libs-release-local/master-templates
 
 # environment variable for child auth filter jar path
@@ -148,6 +151,8 @@ COPY /src/i18n/mock-relying-party-i18n-bundle/*  ${work_dir}/mock-relying-party-
 COPY /src/i18n/esignet-i18n-bundle/*  ${work_dir}/esignet-i18n-bundle/
 
 COPY /src/sdk/tech5/* ${tech5_zip_path}/
+
+COPY /src/impl/* ${custom_zip_path}/
 
 COPY /src/jre/zulu11.41.23-ca-fx-jre11.0.8-win_x64.zip ${regclient_jar_path}/zulu11.41.23-ca-fx-jre11.0.8-win_x64.zip
 
