--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -160,6 +160,8 @@ COPY /src/icu4j/* ${icu4j_jar_path}/
 
 COPY /src/auth/* ${regproc_jar_path}/
 
+COPY /src/sms/* ${kernel_jar_path}/
+
 COPY ./configure.sh ${work_dir}/
 
 COPY pom.xml ${work_dir}/
